# NeuroSploit

./: .env  .env.example  .gitignore  .gitmodules  LICENSE  QUICKSTART.md  README.md  docker-compose.lite.yml  docker-compose.test.yml  docker-compose.yml  install_tools.sh  neurosploit.py  pyproject.toml  rebuild.sh  requirements.txt  setup.py  start.sh
agents/: base_agent.py  exploitation_agent.py  lateral_agent.py  network_recon_agent.py  persistence_agent.py  privesc_agent.py  web_pentest_agent.py
backend/: config.py  main.py  requirements.txt
benchmark/: __init__.py  config.py  evaluator.py  report.py  runner.py  scorer.py
config/: config-example.json  config.json  config2.json  opsec_profiles.json
core/: browser_validator.py  container_pool.py  context_builder.py  kali_sandbox.py  knowledge_augmentor.py  llm_manager.py  mcp_client.py  mcp_server.py  mcp_tools_pd.py  mcp_tools_proxy.py  model_router.py  opsec_manager.py  pentest_executor.py  report_generator.py  sandbox_manager.py  scheduler.py  tool_installer.py  tool_registry.py
custom_agents/: example_agent.py
data/: vuln_knowledge_base.json
docker/: Dockerfile.backend  Dockerfile.backend.lite  Dockerfile.frontend  Dockerfile.kali  Dockerfile.sandbox  Dockerfile.test  Dockerfile.tools  docker-compose.kali.yml  docker-compose.sandbox.yml  nginx.conf
docs/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
prompts/: library.json  task_library.json
scripts/: build-kali.sh
src/: config.py  openai_client.py  run.py
techniques/: __init__.py  filters.py  (+2 more)
(+382 files in other folders)
